# EP-353_ProblemSets

./: README.md
FinalProject/FinalProject/: CMakeLists.txt  DESIGN.md  README.md  WizardWavePresentation.key
FinalProject/FinalProject/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h
FinalProject/FinalProject/Source/DSP/: EffectsChain.cpp  EffectsChain.h  Filter.cpp  Filter.h  SynthEngine.cpp  SynthEngine.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h  WaveTable.cpp  WaveTable.h
FinalProject/FinalProject/Source/Parameters/: Parameters.cpp  Parameters.h
FinalProject/FinalProject/Source/State/: PresetManager.cpp  PresetManager.h  StateManager.cpp  StateManager.h
FinalProject/FinalProject/Source/UI/: MagicTrail.cpp  MagicTrail.h  Node.cpp  Node.h  Plane.cpp  Plane.h  PlaneManager.cpp  PlaneManager.h
FinalProject/FinalProject/Source/Utility/: MathUtils.cpp  MathUtils.h  RandomUtils.cpp  RandomUtils.h  WavWriter.h
FinalProject/FinalProject/WizardWave/: WizardWave.jucer
FinalProject/FinalProject/WizardWave/Builds/MacOSX/: Info-App.plist
FinalProject/FinalProject/WizardWave/Builds/MacOSX/WizardWave.xcodeproj/: project.pbxproj
FinalProject/FinalProject/WizardWave/Builds/MacOSX/WizardWave.xcodeproj/project.xcworkspace/xcuserdata/nknapp.xcuserdatad/: UserInterfaceState.xcuserstate
FinalProject/FinalProject/WizardWave/Builds/MacOSX/WizardWave.xcodeproj/xcuserdata/nknapp.xcuserdatad/xcschemes/: xcschememanagement.plist
FinalProject/FinalProject/WizardWave/Builds/VisualStudio2022/: WizardWave.sln  WizardWave_App.vcxproj  WizardWave_App.vcxproj.filters  resources.rc
FinalProject/FinalProject/WizardWave/JuceLibraryCode/: JuceHeader.h
FinalProject/FinalProject/WizardWave/Source/: Main.cpp
FinalProject/Proposal/: README.md
FinalProject/Status/: README.md
ProblemSet1/: HelloWorld  HelloWorld.c  README.md
ProblemSet2/: Problem.2.1.c  Problem2.2  Problem2.2.c  Problem2.3  Problem2.3.c  Problem2.4  Problem2.4.c  Problem2.5  Problem2.5.c  Problem2.6  Problem2.6.c
ProblemSet3/: Problem3.1  Problem3.1.c  Problem3.2  Problem3.2.c  Problem3.3  Problem3.3.c  Problem3.4  Problem3.4.c  Problem3.5  Problem3.5.c  Problem3.6  Problem3.6.c
ProblemSet4/ProblemSet4.1/: CmakeLists.txt
ProblemSet4/ProblemSet4.1/Source/: Main.cpp
ProblemSet4/ProblemSet4.2/: CMakeLists.txt  ProblemSet4.jucer
ProblemSet4/ProblemSet4.2/Builds/MacOSX/ProblemSet4.xcodeproj/: project.pbxproj
ProblemSet4/ProblemSet4.2/JuceLibraryCode/: JuceHeader.h
ProblemSet4/ProblemSet4.2/Source/: Main.cpp
ProblemSet4/ProblemSet4.3/: CMakeLists.txt  ProblemSet4.jucer
ProblemSet4/ProblemSet4.3/Builds/MacOSX/ProblemSet4.xcodeproj/: project.pbxproj
ProblemSet4/ProblemSet4.3/JuceLibraryCode/: JuceHeader.h
ProblemSet4/ProblemSet4.3/Source/: Main.cpp
ProblemSet4/ProblemSet4.4/: CMakeLists.txt  ProblemSet4.jucer
ProblemSet4/ProblemSet4.4/Builds/MacOSX/ProblemSet4.xcodeproj/: project.pbxproj
ProblemSet4/ProblemSet4.4/JuceLibraryCode/: JuceHeader.h
ProblemSet4/ProblemSet4.4/Source/: Main.cpp
ProblemSet4/ProblemSet4.5/: CMakeLists.txt  ProblemSet4.jucer
ProblemSet4/ProblemSet4.5/Builds/MacOSX/ProblemSet4.xcodeproj/: project.pbxproj
ProblemSet4/ProblemSet4.5/JuceLibraryCode/: JuceHeader.h
ProblemSet4/ProblemSet4.5/Source/: Main.cpp
ProblemSet4/ProblemSet4.6/: CMakeLists.txt  NewProject.jucer  reduct.aiff
ProblemSet4/ProblemSet4.6/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
ProblemSet4/ProblemSet4.6/Source/: Main.cpp
